fix image hover behavior on smaller devices

--- a/imports/components/NewsContainer/NewsContainer.css
+++ b/imports/components/NewsContainer/NewsContainer.css
@@ -17,10 +17,18 @@
 	transition: transform 0.3s ease, opacity 0.1s ease;
     cursor: pointer;
     -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+    position: absolute;
+    top: -9999px;
+    right: -9999px;
+    bottom: -9999px;
+    left: -9999px;
+    margin: auto;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .enter-news-tile:hover .enter-news-image {
-	transform: scale(1.05, 1.05) translateY(-50%);
+	transform: scale(1.05, 1.05);
     opacity: 1;
 }
 
